welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: type mismatch;
 found   : Unit
 required: Boolean
while(dejaFait=nbPas) {recule();}
              ^